Fix insights on smaller screen. Made the color white. Animation shows once for The Gradflow Terminal and Insights

--- a/src/components/LandingPage/Styles/University.css
+++ b/src/components/LandingPage/Styles/University.css
@@ -9,3 +9,7 @@
   opacity: 1;
   animation: fadeInLeft 0.8s ease-in;
 }
+
+.css-c35id4-MuiButtonBase-root-MuiChip-root .MuiChip-label {
+  color: white !important;
+}
